// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav/> renders and displays properly if there IS a user 1`] = `
<ul
  className="nav"
>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/"
    >
      Explore Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/add"
    >
      Add Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/mine"
    >
      My Photos
    </NavLink>
  </li>
  <li>
    <div
      className="row greeting"
    >
      Hi, 
      Sarah
      !
      <a
        href="/auth/logout"
      >
        Log Out
      </a>
    </div>
  </li>
</ul>
`;

exports[`<Nav/> renders and displays properly if there is no a user 1`] = `
<ul
  className="nav"
>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/"
    >
      Explore Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/add"
    >
      Add Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/mine"
    >
      My Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/logIn"
    >
      Log In
    </NavLink>
  </li>
</ul>
`;
